<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nucome.app.crm.RegisterActivity">

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="电邮:"
        android:id="@+id/emailLabel"

        android:layout_marginTop="16dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:maxLength="40"
        android:maxLines="1"
        android:id="@+id/emailEditText"
        android:layout_toRightOf="@+id/emailLabel"
        android:layout_alignBaseline="@+id/emailLabel" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="密码:"
        android:id="@+id/passwordTextView"
        android:layout_below="@+id/emailLabel"
        android:layout_alignLeft="@+id/emailLabel"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:maxLines="1"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/passwordEditText"
        android:layout_alignTop="@+id/passwordTextView"
        android:layout_toRightOf="@+id/passwordTextView"
        android:layout_alignBaseline="@+id/passwordTextView" />


    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="性:"
        android:id="@+id/lastNameLabel"
        android:layout_below="@+id/passwordTextView"
        android:layout_alignRight="@+id/passwordTextView"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastName"

        android:enabled="true"
        android:maxLines="1"
        android:maxLength="15"
        android:id="@+id/lastNameEditText"
        android:layout_below="@+id/passwordTextView"
        android:layout_toRightOf="@+id/lastNameLabel"
        android:layout_alignBaseline="@+id/lastNameLabel"
        />


    <TextView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="名:"
        android:id="@+id/firstNameLabel"
        android:layout_below="@+id/passwordTextView"
        android:layout_toRightOf="@+id/lastNameEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:enabled="true"
        android:hint="@string/firstName"

        android:maxLines="1"
        android:maxLength="15"
        android:id="@+id/firstNameEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_toRightOf="@+id/firstNameLabel"
        android:layout_alignBaseline="@+id/firstNameLabel"
        />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="电话:"
        android:id="@+id/phoneLabel"
        android:layout_below="@+id/lastNameLabel"
        android:layout_alignLeft="@+id/lastNameLabel"
        android:layout_marginTop="16dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:maxLines="1"
        android:enabled="true"
        android:maxLength="40"
        android:hint="@string/phone"
        android:id="@+id/phoneEditText"
        android:layout_below="@+id/emailLabel"
        android:layout_toRightOf="@+id/phoneLabel"
        android:layout_alignBaseline="@+id/phoneLabel" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:text="别名:"
        android:id="@+id/nickNameLabel"
        android:layout_below="@+id/phoneLabel"
        android:layout_alignLeft="@+id/phoneLabel"
        android:layout_marginTop="16dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:maxLines="1"
        android:enabled="true"
        android:maxLength="40"
        android:hint="@string/nickName"
        android:id="@+id/nickNameEditText"
        android:layout_below="@+id/emailLabel"
        android:layout_toRightOf="@+id/nickNameLabel"
        android:layout_alignBaseline="@+id/nickNameLabel" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text=""
        android:textColor="#FF4081"
        android:id="@+id/messageTextView"
        android:layout_below="@+id/nickNameLabel"
        android:layout_alignLeft="@+id/nickNameLabel"
        android:layout_marginTop="16dp" />

     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册"
        android:id="@+id/submitRegister"
        android:layout_below="@+id/messageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
</RelativeLayout>
